changed html and js

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html>
 <head>
 	<title>index</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-	
 	<style type="text/css">
 		.container{
 			margin-top: 30px;
@@ -26,8 +24,8 @@
 	<div class="container">
 			<div class="form-group">
 				<div>
-					<input type="text" name="prefName">
-					<input type="button" value="submit">
+					<input type="text" name="prefName" required>
+					<input type="button" value="submit" class="btn btn-primary">
 				</div>
 			</div>
 
