i think we are okay

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 	<div class="container">
 		<h4>Allowed characters: Letters A-Z , a-z, dot/ period (.), one space, apostrophe, and a dash(-)</h4>
 		<div class="form-group">
-				<div>
+				<form id="prefNameForm">
 					<input type="text" name="prefName" required class="form-control"><br>
 					<input type="button" value="submit" class="btn btn-primary">
-				</div>
+					<input type="button" value="reset" class="btn btn-warning">
+				</form>
 			</div>
 
 			<div id="msg"></div>
